# semantice-search-rag

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/index/: chunks.jsonl  embeddings.pkl  metadata.json  run.json
data/: eval_queries.jsonl  sample_docs.jsonl
deploy/: render.yaml
docs/: deployment.md
src/rag_search/: api.py  config.py  embedder.py  evaluate.py  ingest.py  rag.py  schemas.py  search.py  text_splitter.py  vector_store.py
tests/: test_config.py  test_ingest.py  test_text_splitter.py  test_vector_store.py
